--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,18 +5,6 @@
   height: 100vh;
 }
 
-.landing-inner {
-  color: #fff;
-  height: 100%;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
 /* Overlay */
 .dark-overlay {
   background-color: rgba(0, 0, 0, 0.7);
@@ -166,4 +154,32 @@
 
 .my5 {
   margin: 50px 0px;
+}
+
+.m6 {
+  margin: 60px;
+}
+
+.mt6 {
+  margin-top: 60px;
+}
+
+.mb6 {
+  margin-bottom: 60px;
+}
+
+.ml6 {
+  margin-left: 60px;
+}
+
+.mr6 {
+  margin-right: 60px;
+}
+
+.mx6 {
+  margin: 0px 60px;
+}
+
+.my6 {
+  margin: 60px 0px;
 }
