--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,16 @@ html * {
   height: 100%;
 }
 
+._loading_overlay_overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
+
 .auth-page-header {
   margin-top: 7rem;
   margin-bottom: 2rem;
