add fontsize common css

--- a/client/src/common.css
+++ b/client/src/common.css
@@ -1,3 +1,28 @@
+/* Font size */
+.bold-text {
+  font-weight: 600 !important;
+}
+
+.fs-xs {
+  font-size: 0.6rem !important;
+}
+
+.fs-s {
+  font-size: 0.8rem !important;
+}
+
+.fs-m {
+  font-size: 1rem !important;
+}
+
+.fs-l {
+  font-size: 1.2rem !important;
+}
+
+.fs-xl {
+  font-size: 1.4rem !important;
+}
+
 /* Spacing */
 /* TODO: Fix x and y margins to not set the other axis to 0rem */
 .m-0 {
