update employee page

--- a/client/src/common.css
+++ b/client/src/common.css
@@ -31,6 +31,14 @@
   font-size: 1.8rem !important;
 }
 
+.fs-xxxxl {
+  font-size: 2.1rem !important;
+}
+
+.fs-xxxxxl {
+  font-size: 2.4rem !important;
+}
+
 /* Margin */
 
 .m-0 {
